2010-09-03  Bharathwaaj Srinivasan  <bharathwaaj.s@gmail.com>

Reviewed by Xan Lopez.

        Initialize keyboard events before passing plugins.
        https://bugs.webkit.org/show_bug.cgi?id=44771

        No new tests needed since this is a trivial fix.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::handleKeyboardEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@66723 bbb929c8-8fbe-4397-9dbb-9b2b20218538